# group-varint-offset-encoding

./: Cargo.toml  README.md  gen_table.py
src/: decoder.rs  lib.rs  util.rs
